Client Side - Register & HomeComponent

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,9 +1,7 @@
 <app-nav></app-nav>
 
 <div class="container" style="margin-top:60px;">
-    <ul>
-        <li *ngFor="let user of Users">{{user.userId}} | {{user.userName}}</li>
-    </ul>
+    <app-home></app-home>
 </div>
 
 <router-outlet></router-outlet>
