--- a/Client/src/app/Shared/components/nav/nav.component.html
+++ b/Client/src/app/Shared/components/nav/nav.component.html
@@ -44,8 +44,12 @@
         <!-- Template Form -->
         <!-- SHOW only when user is not LoggedIn -->
         <form class="form-inline my-2 my-lg-0" #form="ngForm" (ngSubmit)="login()" autocomplete="false" *ngIf="(currentUser|async)===null">
-          <input class="form-control mr-sm-2" type="search" placeholder="Username" name="username" [(ngModel)]="model.username">
-          <input class="form-control mr-sm-2" type="search" placeholder="Password" name="password" [(ngModel)]="model.password">
+          <!-- Username -->
+          <input class="form-control mr-sm-2" type="text" placeholder="Username" name="username" [(ngModel)]="model.username">
+          <!-- Password -->
+          <input class="form-control mr-sm-2" type="password" placeholder="Password" name="password" [(ngModel)]="model.password">
+          
+          <!-- Login Button-->
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
         </form> 
       </div> 
