--- a/Client/src/styles.css
+++ b/Client/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+
+/*Toastr Notification Styles*/
+@import '~ngx-toastr/toastr.css';
