RouteGuard + bootswatch theme

--- a/Client/src/app/Components/resister/resister.component.html
+++ b/Client/src/app/Components/resister/resister.component.html
@@ -1,6 +1,9 @@
 <!--===============-->
 <!-- REGISTER FORM -->
 <!--===============-->
+<!-- Note: This Component is wrongly named :resister!-->
+<!-- Register Component -->
+
 <form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
     <h2 class="text-center text-primary">Sign up</h2>
     <hr>
