--- a/Client/src/app/Components/members/member-details/member-details.component.html
+++ b/Client/src/app/Components/members/member-details/member-details.component.html
@@ -62,9 +62,9 @@
                 <h4>Interests</h4>
                 <p>{{member.interests}}</p>
             </tab>
-            <!-- tab3-->
+            <!-- tab3: {NgxPhotoGallery}-->
             <tab heading="Photos">
-                <p>Photos will go here</p>
+                <ngx-gallery [options]="galleryOptions" [images]="galleryImages" style="display: inline-block;margin-bottom: 20px;"></ngx-gallery>
             </tab>
             <!--tab4-->
             <tab heading="Messages">
