Member ProfileEdit (API + Client)

--- a/Client/src/app/Shared/components/nav/nav.component.html
+++ b/Client/src/app/Shared/components/nav/nav.component.html
@@ -31,7 +31,7 @@
 
           <div class="dropdown-menu  mt-3" aria-labelledby="dropdownMenuLink">
              <!-- Profile-->
-            <a class="dropdown-item" href="#">Edit Profile</a>
+            <a class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
             <div class="dropdown-divider"></div>
              <!--Logout-->
             <a class="dropdown-item" href="#" (click)="logout()">Logout</a>
