Ngx-Spinner(Loader Service + Interceptor) for API Calls

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,5 +1,18 @@
+<!--========-->
+<!-- NAVBAR -->
+<!--========-->
 <app-nav></app-nav>
 
+<!--========-->
+<!-- SPINNER (Loading for async API requests)-->
+<!--========-->
+<ngx-spinner>
+    <h3>Loading...</h3>
+</ngx-spinner>
+
+<!--=================-->
+<!--Show (Components)-->
+<!--=================-->
 <div class="container" style="margin-top:60px;">
     <router-outlet></router-outlet>
 </div>
