--- a/Client/src/app/Components/members/member-list/member-list.component.html
+++ b/Client/src/app/Components/members/member-list/member-list.component.html
@@ -5,7 +5,7 @@
 <!-- Display memberCard as listItem -->
 
 <div class="row">
-    <div *ngFor="let member of members" class="col-2">
+    <div *ngFor="let member of members |async" class="col-2">
         <!-- Pass member data to MemberCard Component-->
         <app-member-card [member]="member"></app-member-card>
     </div>
