--- a/Client/src/app/Components/members/member-edit/member-edit.component.html
+++ b/Client/src/app/Components/members/member-edit/member-edit.component.html
@@ -110,7 +110,7 @@
             <!-- tab2  -->
             <!--=======-->
             <tab heading="Edit Photos">
-               <p>Edit Photo here</p>
+               <app-photo-editor [member]="member"></app-photo-editor>
             </tab>
            
         </tabset>
