--- a/Client/src/app/Components/members/photo-editor/photo-editor.component.html
+++ b/Client/src/app/Components/members/photo-editor/photo-editor.component.html
@@ -6,8 +6,13 @@
         <img src="{{photo.url}}" alt="{{photo.url}}" class="img-thumbnail p-1">
         <div class="text-center">
             <!-- buttons-->
-            <!-- Set Photo as MainPhoto -->
-            <button class="btn btn-sm">Main</button>
+            
+            <!-- *****Set Photo as MainPhoto***** -->
+            <button  class="btn btn-sm"
+                    [disabled]="photo.isMain"
+                    (click)="setMainPhoto(photo)"
+                    [ngClass]='photo.isMain? "btn-success active":"btn-outline-success"'>Main</button>
+
             <!-- Delete Photo-->
             <button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
             <br><br>
