--- a/Client/src/app/Shared/components/nav/nav.component.css
+++ b/Client/src/app/Shared/components/nav/nav.component.css
@@ -1,3 +1,10 @@
 .dropdown-toggle, .dropdown-item{
     cursor:pointer;
 }
+
+/*LoggedInUser Image*/
+img{
+    max-height: 50px !important;
+    border:2px solid #fff;
+    display: inline;
+}
