--- a/Client/src/app/Components/members/photo-editor/photo-editor.component.html
+++ b/Client/src/app/Components/members/photo-editor/photo-editor.component.html
@@ -13,8 +13,10 @@
                     (click)="setMainPhoto(photo)"
                     [ngClass]='photo.isMain? "btn-success active":"btn-outline-success"'>Main</button>
 
-            <!-- Delete Photo-->
-            <button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
+            <!-- ***** Delete Photo *****-->
+            <button [disabled]="photo.isMain"
+                    class="btn btn-sm btn-danger"
+                    (click)="deletePhoto(photo.id)"><i class="fa fa-trash"></i></button>
             <br><br>
         </div>
     </div>
