--- a/Client/src/app/Components/resister/resister.component.html
+++ b/Client/src/app/Components/resister/resister.component.html
@@ -3,26 +3,142 @@
 <!--===============-->
 <!-- Note: This Component is wrongly named :resister!-->
 <!-- Register Component -->
+<!-- apply 'is-invalid' class in input if form is submitted & input has error -->
 
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+
+<form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
     <h2 class="text-center text-primary">Sign up</h2>
     <hr>
 
-    <!-- Username -->
+     <!-- Gender -->
+    <!--==========-->
     <div class="form-group">
-        <input type="text" class="form-control" placeholder="Username" name="username" [(ngModel)]="model.username">
+        <label class="control-label" style="margin-right: 10px;">I am a: </label>
+        <label class="radio-inline">
+            <input type="radio" value="male" formControlName="gender"
+            [ngClass]="{'is-invalid':f.submitted && f.gender.errors}">Male
+        </label>
+        <label class="radio-inline">
+            <input type="radio" value="female" formControlName="gender" class="ml-3" 
+            [ngClass]="{'is-invalid':f.submitted && f.gender.errors}">Female 
+        </label>
+        
+        <!-- Validation Messages -->
+        <div class="invalid-feedback" *ngIf="f.gender.errors">
+            <div *ngIf="f.gender.errors.required">Gender is required</div>
+        </div>
     </div>
 
-    <!-- Password -->
+    <!-- Username -->
+    <!--==========-->
     <div class="form-group">
-        <input type="password" class="form-control" placeholder="Password" name="password" [(ngModel)]="model.password">
+        <input type="text" class="form-control" placeholder="Username" name="username" formControlName="username"
+            [ngClass]="{'is-invalid':f.username.touched && f.username.errors}">
+
+        
+        <!-- Validation Messages -->
+        <div class="invalid-feedback" *ngIf="f.username.touched && f.username.errors">
+            <div *ngIf="f.username.errors.required" >Username is required</div>
+        </div>
+    </div>
+
+    
+    <!-- knownAs -->
+    <!--==========-->
+    <div class="form-group">
+        <input type="text" class="form-control" placeholder="KnownAs" name="knownAs" formControlName="knownAs"
+            [ngClass]="{'is-invalid':f.knownAs.touched && f.knownAs.errors}">
+
+        
+        <!-- Validation Messages -->
+        <div class="invalid-feedback" *ngIf="f.knownAs.touched && f.knownAs.errors">
+            <div *ngIf="f.knownAs.errors.required" >KnownAs is required</div>
+        </div>
+    </div>
+
+   
+
+     <!-- DOB -->
+    <!--======-->
+    <div class="form-group">
+        <!-- html5 datePicker-->
+        <!--<input type="date" class="form-control" placeholder="Date Of Birth" name="dateOfBirth" formControlName="dateOfBirth"
+            [ngClass]="{'is-invalid':f.dateOfBirth.touched && f.dateOfBirth.errors}">-->
+
+        <!-- ngXBootstrap datePicker-->
+        <input type="text" class="form-control" placeholder="Date Of Birth" name="dateOfBirth" formControlName="dateOfBirth"
+               bsDatepicker [bsConfig]="bsConfig"
+               [ngClass]="{'is-invalid':f.dateOfBirth.touched && f.dateOfBirth.errors}">
+                        
+        <!-- Validation Messages -->
+        <div class="invalid-feedback" *ngIf="f.dateOfBirth.touched && f.dateOfBirth.errors">
+            <div *ngIf="f.dateOfBirth.errors.required" >DateOfBirth is required</div>
+        </div>
+    </div>
+
+     <!-- City -->
+    <!--==========-->
+    <div class="form-group">
+        <input type="text" class="form-control" placeholder="City" name="city" formControlName="city"
+            [ngClass]="{'is-invalid':f.city.touched && f.city.errors}">
+
+        
+        <!-- Validation Messages -->
+        <div class="invalid-feedback" *ngIf="f.city.touched && f.city.errors">
+            <div *ngIf="f.city.errors.required" >City is required</div>
+        </div>
+    </div>
+
+     <!-- Country -->
+    <!--==========-->
+    <div class="form-group">
+        <input type="text" class="form-control" placeholder="Country" name="country" formControlName="country"
+            [ngClass]="{'is-invalid':f.country.touched && f.country.errors}">
+
+        <!-- Validation Messages -->
+        <div class="invalid-feedback" *ngIf="f.country.touched && f.country.errors">
+            <div *ngIf="f.country.errors.required" >Country is required</div>
+        </div>
+    </div>
+
+
+    <!-- Password -->
+    <!--==========-->
+    <div class="form-group">
+        <input type="password" class="form-control" placeholder="Password" name="password" formControlName="password"
+            [ngClass]="{'is-invalid':f.password.touched && f.password.errors}">
+        
+        <!-- Validation Messages -->
+        <div class="invalid-feedback" *ngIf="f.password.touched && f.password.errors">
+            <div *ngIf="f.password.errors.required" >Password is required</div>
+        </div>
+    </div>
+
+     <!-- confirmPassword -->
+     <!--=================-->
+     <div class="form-group">
+        <input type="password" class="form-control" placeholder="confirmPassword" name="confirmPassword" formControlName="confirmPassword"
+            [ngClass]="{'is-invalid':f.confirmPassword.touched && f.confirmPassword.errors}">
+
+        
+          <!-- Validation Messages -->
+          <div class="invalid-feedback" *ngIf="f.confirmPassword.touched && f.confirmPassword.errors">
+            <div *ngIf="f.confirmPassword.errors.required" >ConfirmPassword is required</div>
+            <div *ngIf="f.confirmPassword.errors.mustMatch">ConfirmPassword must match with Password</div>
+        </div>
     </div>
 
     <!-- Buttons -->
     <div>
         <!-- Submit -->
-        <button class="btn btn-success mr-2" type="submit">Register</button>
+        <button class="btn btn-success mr-2" type="submit" [disabled]="registerForm.invalid">Register</button>
         <!-- Cancel -->
         <button class="btn btn-danger mr-2" type="button" (click)="cancel()">Cancel</button>
     </div>
 </form>
+
+
+<div>
+    <p>{{registerForm.value |json}}</p>
+    <p>{{registerForm.valid}}</p>
+</div>
